--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8080
 spring.h2.console.enabled=true
+spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:demo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 
 #hibernate
 spring.jpa.generate-ddl=true
